2001-06-01  Rob Browning  <rlb@cs.utexas.edu>

	* .cvsignore: here and in all subdirectories listing Makefile and
	Makefile.in.

2001-05-31  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic: New directory, implements the box type in a shared
	library (aka extension)

	Thanks to Thomas Wawrzinek for patching box.c into an extension!
	
2001-05-30  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-module: New directory, similar to box, but defines the
	primitives in a module (box-module) instead of defining them
	globally.

	* safe: New directory, explaining some aspects of using safe
	environments for evaluation.

2001-05-29  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* New directory for Guile example code.
